I did fix dropdown alignment

--- a/src/components/includes/style.module.css
+++ b/src/components/includes/style.module.css
@@ -5,7 +5,7 @@
 .flex1 {
     flex: 1;
     min-width: 170px;
-    margin: 0px 5px;
+    margin: 7px 5px;
 }
 
 .plainPaper{
